# cradle

./: .clang-format  .codecov.yml  .coveralls.yml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  api.json  api.yml  codecov.yml  conanfile.py  conanfile.txt  docker-config.json  fips.yml
.github/workflows/: clang.yml  docker.yml  gcc.yml  msvc.yml  release.yml
cmake/: version.cmake
docs/: README.md  data.md  index.md  intro.md  iss_object.md  msg_iss_object.md  msg_iss_object_metadata.md  msg_overview.md  msg_perform_local_calc.md  msg_post_calculation.md  msg_post_iss_object.md  replace-puml.py
fips-generators/: cpp_api_generator.py  jinja_filters.py  jinja_globals.py  utilities.py  version_info_generator.py
fips-generators/cpp_api/: jinja_filters.py  jinja_globals.py  utilities.py
fips-generators/cpp_api/templates/: cpp_file.j2  enums.j2  hpp_file.j2  structures.j2  unions.j2
fips-generators/cpp_api_templates/: cpp_file.j2  enums.j2  hpp_file.j2  structures.j2  unions.j2
preprocessor/: CMakeLists.txt  README.md  blocks.ml  dependency.ml  enums.ml  functions.ml  main.ml  mutations.ml  provider.ml  records.ml  structures.ml  types.ml  unions.ml  utilities.ml
python/: config_template.yml  generate_config.py  thinknode.py  websocket_client.py  websocket_test.py
scripts/: docker-build.sh  docker-setup.sh  set-up-conan.sh  set-up-python.sh  set-up-system.sh
src/: server.cpp
src/cradle/: cache_types.hpp  cache_types.yml  common.hpp  config.hpp  config.yml  core.h  disk_cache.cpp  disk_cache.hpp
src/cradle/background/: encoded_progress.h  execution_pool.cpp  execution_pool.h  internals.h  job.cpp  job.h  os.cpp  os.h  requests.cpp  requests.h  system.h  testing.h
src/cradle/caching/: disk_cache.cpp  disk_cache.hpp  immutable.h  immutable_cache.cpp  immutable_cache.h
src/cradle/caching/immutable/: cache.cpp  cache.hpp  consumption.cpp  consumption.h  internals.cpp  internals.h  production.cpp  production.h  ptr.cpp  ptr.h
src/cradle/core/: api_types.cpp  api_types.hpp  api_types.yml  diff.cpp  diff.hpp  diff_types.yml  dynamic.cpp  dynamic.h  dynamic.hpp  encoded_progress.h  exception.h  exception.hpp  flags.h  flags.hpp  hash.h  hash.hpp  id.cpp  id.h  id.hpp  immutable.h  immutable.hpp  logging.hpp  monitoring.h  monitoring.hpp  omissible.h  omissible.hpp  preprocessed.h  preprocessed.hpp  regular.hpp  testing.h  testing.hpp  type_definitions.h  type_definitions.hpp  type_info.h  type_info.hpp  type_interfaces.cpp  type_interfaces.h  type_interfaces.hpp  upgrades.hpp  utilities.cpp  (+3 more)
src/cradle/encodings/: base64.cpp  base64.h  base64.hpp  json.cpp  json.h  json.hpp  lz4.cpp  lz4.h  msgpack.cpp  msgpack.h  msgpack.hpp  msgpack_internals.h  msgpack_internals.hpp  native.cpp  native.h  sha256_hash_id.h  yaml.cpp  yaml.h  yaml.hpp
src/cradle/fs/: app_dirs.cpp  app_dirs.h  app_dirs.hpp  file_io.cpp  file_io.h  file_io.hpp  types.hpp  utilities.cpp  utilities.h  xdg.cpp  xdg.hpp
src/cradle/io/: asio.h  base64.cpp  base64.hpp  endian.cpp  endian.h  endian.hpp  file.cpp  file.hpp  http_executor.cpp  http_executor.h  http_request_pool.h  http_requests.cpp  http_requests.hpp  http_types.yml  json_io.cpp  json_io.hpp  mock_http.cpp  mock_http.h  msgpack_internals.hpp  msgpack_io.cpp  msgpack_io.hpp  raw_memory_io.cpp  raw_memory_io.h  raw_memory_io.hpp
src/cradle/service/: core.cpp  core.h  internals.h  types.hpp
src/cradle/services/: requests.cpp  requests.h
src/cradle/thinknode/: apm.cpp  apm.h  apm.hpp  calc.cpp  calc.h  calc.hpp  iam.cpp  iam.h  iam.hpp  ipc.cpp  ipc.h  ipc.hpp  iss.cpp  iss.h  iss.hpp  messages.cpp  messages.h  messages.hpp  provider.cpp  provider.h  provider.hpp  supervisor.cpp  supervisor.h  supervisor.hpp  types.hpp  types.yml  utilities.cpp  utilities.h  utilities.hpp
src/cradle/utilities/: arrays.cpp  arrays.h  concurrency_testing.h  diff.cpp  diff.hpp  environment.cpp  environment.h  errors.h  functional.h  git.h  logging.h  regular.h  testing.h  text.h
src/cradle/websocket/: client.cpp  client.h  client.hpp  local_calcs.cpp  local_calcs.h  local_calcs.hpp  messages.hpp  messages.yml  server.cpp  server.h  server.hpp
tests/: disk_cache.cpp  local_calcs.cpp  runner.cpp  websocket.cpp
tests/background/: encoded_progress.cpp  execution_pool.cpp  requests.cpp
tests/caching/: disk_cache.cpp  immutable.cpp
tests/core/: diff.cpp  dynamic.cpp  exception.cpp  id.cpp  type_interfaces.cpp  utilities.cpp  value.cpp
tests/encodings/: base64.cpp  json.cpp  lz4.cpp  msgpack.cpp  native.cpp  yaml.cpp
tests/fs/: app_dirs.cpp  file_io.cpp  xdg.cpp
tests/io/: base64.cpp  endian.cpp  file.cpp  http_executor.cpp  http_requests.cpp  http_requests.hpp  json_io.cpp  mock_http.cpp  msgpack_io.cpp  raw_memory_io.cpp
tests/service/: core.cpp
tests/services/: requests.cpp
tests/thinknode/: apm.cpp  calc.cpp  iam.cpp  iss.cpp  utilities.cpp
tests/utilities/: arrays.cpp  diff.cpp  encoded_progress.cpp  environment.cpp  functional.cpp
